# Tokio-Tungstenite-Rocket

./: .env  .gitignore  Cargo.toml  Dockerfile  README.adoc  README.md  Rocket.toml
.github/workflows/: aws.yml
api/: Cargo.toml
api/src/: auth.rs  authors.rs  books.rs  email.rs  emails.rs  error.rs  lib.rs  mod.rs  okapi.rs  okapi_example.rs  okapi_pararium.rs  pool.rs  user.rs
config/: Cargo.toml
config/src/: app_config.rs
dto/: Cargo.toml
dto/src/: dto.rs
entity/: Cargo.toml
entity/src/: author.rs  book.rs  email.rs  lib.rs  post.rs  prelude.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220120_000001_create_user_table.rs  m20230321_054811_create_email_table.rs  main.rs
service/: Cargo.toml
service/src/: auth.rs  http_auth.rs  lib.rs  mail.rs  mutation.rs  query.rs
socket/: Cargo.toml
socket/src/: main.rs
src/: main.rs
websocket/: Cargo.toml
websocket/examples/: asynchronous_processing.rs  autobahn-client.rs  autobahn-server.rs  client.rs  echo-server.rs  interval-server.rs  server-custom-accept.rs  server-headers.rs  server.rs  simple_consumer.rs  simple_producer.rs
websocket/src/: asynchronous_processing.rs  lib.rs  simple_consumer.rs  simple_producer.rs
