[package]
name = "example-api"
version = "0.1.0"
authors = ["x2d7751347m@gmail.com"]
edition = "2021"
publish = false

[workspace]
members = [".", "api", "service", "entity", "migration", "dto", "socket", "websocket"]

[dependencies]
dotenv = "0.15.0"
rocket-example-api = { path = "api" }
websocket = { path = "websocket" }
