[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = [
  "json",
] }
serde = "1.0.167"
time = { version = "0.3", features = ["serde"] }
chrono = "0.4.26"
schemars = { version = "0.8", features = ["chrono"] }
validator = { version = "0.16.1", features = ["derive"] }

[dependencies.sea-orm]
# path = "../../../" # remove this line in your own project
version = "0.12.0-rc.3" # sea-orm version

[dependencies.rocket_okapi]
version = "0.8.0-rc.3"
