[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
lettre = "0.10.4"
serde = "1.0.167"
rocket = { version = "0.5.0-rc.3", features = [
  "json",
] }
jsonwebtoken = "8.3.0"

[dependencies.sea-orm]
# path = "../../../" # remove this line in your own project
version = "0.12.0-rc.3" # sea-orm version
features = [
    "runtime-tokio-native-tls",
    # "sqlx-postgres",
    "sqlx-mysql",
    # "sqlx-sqlite",
]

[dev-dependencies]
tokio = "1.29.1"

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
