[package]
name = "websocket"
description = "Tokio binding for Tungstenite, the Lightweight stream-based WebSocket implementation"
categories = ["web-programming::websocket", "network-programming", "asynchronous", "concurrency"]
keywords = ["websocket", "io", "web"]
authors = ["x2d7751347m <x2d7751347m@gmail.com>", ]
license = "MIT"
homepage = "https://github.com/"
documentation = "https://docs.rs/"
repository = "https://github.com/"
version = "0.19.0"
edition = "2021"
rust-version = "1.70"
include = ["examples/**/*", "src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[lib]
name = "websocket"
path = "src/lib.rs"

[package.metadata.docs.rs]
# docs.rs doesn't allow writing to ~/.cargo/registry (reasonably), so we have to
# use the CMake build for a proper out-of-tree build.
features = ["native-tls", "__rustls-tls", "cmake-build", "naive-runtime", "tracing", "tokio"]

[features]
default = ["connect", "handshake"]
connect = ["stream", "tokio/net", "handshake"]
handshake = ["tungstenite/handshake"]
native-tls = ["native-tls-crate", "tokio-native-tls", "stream", "tungstenite/native-tls", "handshake"]
native-tls-vendored = ["native-tls", "native-tls-crate/vendored", "tungstenite/native-tls-vendored"]
rustls-tls-native-roots = ["__rustls-tls", "rustls-native-certs"]
rustls-tls-webpki-roots = ["__rustls-tls", "webpki-roots"]
__rustls-tls = ["rustls", "tokio-rustls", "stream", "tungstenite/__rustls-tls", "handshake"]
stream = []
naive-runtime = ["futures-executor"]

[dependencies]

env_logger = "0.10.0"
log = "0.4.19"
tokio = { version = "1.29.1", default-features = true, features = ["full"] }
tokio-metrics = { version = "0.2.2", default-features = false }
hyper = { version = "0.14.27", default-features = false, features = ["http1", "server", "tcp"] }
rdkafka = { version = "0.33", features = ["cmake-build"] }
# clap = "4.3.11"
clap = "2.18.0"
chrono = "0.4.26"
rand = "0.8.5"
futures = { version = "0.3.28" }
futures-executor = { version = "0.3.28", optional = true }
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
futures-channel = { version = "0.3.28"}
tracing = { version = "0.1.30", optional = true }
hdrhistogram = "7.5.2"
migration = { path = "../migration" }
entity = { path = "../entity" }
service = { path = "../service" }
dto = { path = "../dto" }
bcrypt = "0.15"
jsonwebtoken = "8.3.0"

[dependencies.tungstenite]
git = "https://github.com/snapview/tungstenite-rs"
default-features = false

[dependencies.native-tls-crate]
optional = true
package = "native-tls"
version = "0.2.11"

[dependencies.rustls]
optional = true
version = "0.21.2"

[dependencies.rustls-native-certs]
optional = true
version = "0.6.3"

[dependencies.tokio-native-tls]
optional = true
version = "0.3.1"

[dependencies.tokio-rustls]
optional = true
version = "0.24.1"

[dependencies.webpki-roots]
optional = true
version = "0.23.1"

[dev-dependencies]
url = "2.4.0"

[[example]]
name = "autobahn-client"
required-features = ["connect"]

[[example]]
name = "autobahn-server"
required-features = ["handshake"]

[[example]]
name = "client"
required-features = ["connect"]

[[example]]
name = "echo-server"
required-features = ["handshake"]

[[example]]
name = "server-custom-accept"
required-features = ["handshake"]

[[example]]
name = "server"
required-features = ["handshake"]

[[example]]
name = "server-headers"
required-features = ["handshake"]

[[example]]
name = "interval-server"
required-features = ["handshake"]

[[example]]
name = "asynchronous_processing"
